fix alignment
need to add links when ready

--- a/style.css
+++ b/style.css
@@ -65,13 +65,13 @@ body {
 }
 .nav-center {
   width: 100%;
-  /* max-width: 1120px; */
+  max-width: 1120px;
 }
 
 .nav-header {
   /* height: 4rem; */
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
 }
 .nav-logo {
